[project]
name = "ComfyUI-Capricorncd-Tools"
description = "A collection of custom nodes for ComfyUI focused on prompt editing, audio/image keyframe timeline editing, and video compositing."
version = "0.5.0"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/capricorncd/ComfyUI-Capricorncd-Tools"

[tool.comfy]
PublisherId = "capricorncd"
DisplayName = "ComfyUI-Capricorncd-Tools"
Icon = ""
Includes = []

[tool.comfy.node]
Category = "Capricorncd Tools"
